# tavern-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  db.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 9ec8ccad74cd_create_customers_items_orders.py
config/: __init__.py  default.yaml
scripts/: develop.sh  integration_test.sh  start-api.sh
src/api/: app.py
src/api/routers/: customers.py  items.py  orders.py
src/data/: customers.py  items.py  orders.py
tests/integration/: conftest.py  test_customers.tavern.yaml  test_items.tavern.yaml
