[project]
name = "tavern-demo"
version = "0.1.0"
description = "This is a sample project to demonstrate working of tavern library"
authors = [
    {name = "saurabh48782",email = "saurabh48782@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tavern (>=2.15.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "pypika (>=0.48.9,<0.49.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pylint (>=3.3.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tavern_demo", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
